poke/testsuite/poke.pkl/map-ios-diag-1.pk
/* { dg-do compile } */

int @ "foo" : 2#B;  /* { dg-error "expected integer" } */
